--- a/vis/src/components/Cluster/NamesListing.scss
+++ b/vis/src/components/Cluster/NamesListing.scss
@@ -12,8 +12,8 @@
   }
 
   .name-freq {
-    background-color: var(--clr-card-badge-bg);
-    color: var(--clr-card-badge-fg);
+    background-color: var(--clr-bgMain);
+    color: var(--clr-fgText);
     font-weight: 800;
     padding: 4px 12px;
     margin: 4px 8px;
