--- a/docs/src/uikit/vars.styl
+++ b/docs/src/uikit/vars.styl
@@ -3,20 +3,18 @@ $fontTitle = 'Exo 2', sans-serif
 $fontMono = 'Ubuntu Mono', monospace
 
 $codeBgLight = #fffefd;
-$bgColorLandingLight = #f2f5f6;
+$bgColorSecondaryLight = #f2f5f6;
 $bgColorMainLight = white;
-$codeBgLandingLight = $bgColorMainLight;
-$codeBgMainLight = $bgColorLandingLight;
+$codeBgMainLight = $bgColorSecondaryLight;
 $titleLight = #050505;
 $textLight = #313131;
 $bgBorderLight = #e0e4e5;
 
-$accent = hsl(195deg 88% 33%);
-
-$bgColorLandingDark = hsl(195deg 18% 10%);
+$bgColorSecondaryDark = hsl(195deg 18% 10%);
 $bgColorMainDark = hsl(195deg 14% 15%);
-$codeBgLandingDark = $bgColorMainDark;
-$codeBgMainDark = $bgColorLandingDark;
+$codeBgMainDark = $bgColorSecondaryDark;
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
 $bgBorderDark = #41403c;
+
+$accent = hsl(195deg 88% 33%);
