--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -44,17 +44,19 @@ $accent = hsl(195deg 88% 33%);
 
 $codeBgLight = #fffefd;
 $bgColorLandingLight = #f2f5f6;
+$bgColorSecondaryLight = #f2f5f6;
 $bgColorMainLight = white;
 $codeBgLandingLight = $bgColorMainLight;
-$codeBgMainLight = $bgColorLandingLight;
+$codeBgMainLight = $bgColorSecondaryLight;
 $titleLight = #050505;
 $textLight = #313131;
 $bgBorderLight = #e0e4e5;
 
 $bgColorLandingDark = hsl(195deg 18% 10%);
+$bgColorSecondaryDark = hsl(195deg 18% 10%);
 $bgColorMainDark = hsl(195deg 14% 15%);
 $codeBgLandingDark = $bgColorMainDark;
-$codeBgMainDark = $bgColorLandingDark;
+$codeBgMainDark = $bgColorSecondaryDark;
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
 $bgBorderDark = #41403c;
