--- a/vis/src/components/Filters/Filters.scss
+++ b/vis/src/components/Filters/Filters.scss
@@ -10,7 +10,7 @@
     gap: .5rem;
     .label {
       font-weight: 300;
-      color: var(--clr-fg);
+      color: var(--clr-fgText);
       display: flex;
       flex-direction: row;
       align-items: center;  
@@ -31,7 +31,7 @@
           text-decoration: underline;
         }
         &.selected {
-          background-color: var(--clr-card-bg);
+          background-color: var(--clr-bgSecondary);
           box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
           // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
           // color: white;
