--- a/vis/src/components/IncDecInput/IncDecInput.scss
+++ b/vis/src/components/IncDecInput/IncDecInput.scss
@@ -6,7 +6,7 @@
   input {
     background: none;
     border: none;
-    color: var(--clr-fg);
+    color: var(--clr-fgText);
     outline: none;
     padding: 0rem 1rem;
     font-size: 1.2rem;
