--- a/docs/src/components/Options.styl
+++ b/docs/src/components/Options.styl
@@ -5,7 +5,7 @@
   display: grid;
   row-gap: 1em;
   column-gap: 1em;
-  font-family: fontMono;
+  font-family: $fontMono;
   grid-template-columns: max-content 1fr;
   grid-template-rows: repeat(min-content);
   &-item
@@ -14,4 +14,4 @@
       font-weight: 600;
     &-desc
       font-weight: 400;
-      font-family: fontRegular;
+      font-family: $fontRegular;
