--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -29,7 +29,7 @@ body
   // background-color: clrBg;
   // color: clrFg;
   min-height: 100vh;
-  font-family: fontRegular;
+  font-family: $fontRegular;
 
 main
   &.light
@@ -85,18 +85,19 @@ main
       margin: 0;
       padding: 0;
     h2 
-      font-family: fontRegular;
+      font-family: $fontRegular;
       font-size: 2rem;
-    ul
-      flexColumn()
+
+  ul.links
+    flexColumn()
+    flex: 1;
+  li
+    display: flex;
+    transition: background-color transRegular;
+    a
       flex: 1;
-    li
-      display: flex;
-      transition: background-color transRegular;
-      &:hover a
-        color: clrHeaderBg;
-      a
-        flex: 1;
-        text-decoration: underline;
-        color: clrFg;
-        padding: gapMedium;
+      text-decoration: underline;
+      color: $fgText;
+      padding: gapMedium;
+    &:hover a
+      color: clrHeaderBg;
