--- a/docs/src/components/MultilangWindow.styl
+++ b/docs/src/components/MultilangWindow.styl
@@ -1,53 +1,8 @@
 @import "../utils.styl"
 @import "../vars.styl"
 
-.code
-  font-family: fontMono;
-.bash
-  color: white;
-  font-family: fontMono;
-  .lines
-    color: $grayLight;
-    padding-left: 1rem;
-    width: 2.5ch;
+.window-multilang
   .tabs
     flexRow(4px);
     padding-left: $borderRadius;
     padding-bottom: 8px;
-    .tab
-      position: relative;
-      color: darken(white, 60);
-      padding: .5rem .5rem;
-      // border-bottom-left-radius: "calc(%s / 2)" % $borderRadius;
-      // border-bottom-right-radius: "calc(%s / 2)" % $borderRadius;
-      cursor: pointer;
-      // &:after
-      //     $size = 6px;
-      //     content: '';
-      //     position: absolute;
-      //     top: 3px;
-      //     left: calc(50% - 3px);
-      //     width: $size;
-      //     height: $size;
-      //     border-radius: 50%;
-      //     background-color: var(--clr-fgText);
-      //     transform: scale(0);
-      //     transition: transform 150ms ease-in;
-      &:after
-        content: '';
-        position: absolute;
-        top: 4px;
-        left: calc((100% - 60%)/2);
-        right: calc((100% - 60%)/2);
-        height: 4px;
-        background-color: var(--clr-bgBorder);
-        border-radius: 100vw;
-        transform: scaleX(0);
-        transition: transform 150ms ease-in;
-      &:hover
-        color: var(--clr-fgText);
-      &-active
-        &:after
-          transform: scaleX(1);
-        color: var(--clr-fgText);
-        // text-decoration: underline;
