--- a/docs/src/components/Snippet.styl
+++ b/docs/src/components/Snippet.styl
@@ -22,119 +22,78 @@ $editorFontMaxOutWidth = 1111px;
 // 100 * $editorMinFontSize / $editorResponsiveFontSize
 $editorFontMinOutWidth = 777px;
 
-.window
-  &.light
-    // --clr-codeBg: hsl(40deg 22% 98%);
-    --clr-codeBg: $codeBgLandingLight;
-    // --clr-codeBg: #f9fafb;
-    --clr-codeFg: black;
-    --clr-headerBg: $yellowLight;
-    --clr-borderBg: hsl(36deg 10% 87%);
-    // --clr-boxShadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    --clr-codeCommentsFg: $grayLight;
-  &.dark
-    --clr-codeBg: $codeBgLandingDark;
-    --clr-headerBg: #12171e;
-    --clr-borderBg: #434342;
-    --clr-codeFg: white;
-    --clr-boxShadow: rgba(0, 0, 0, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
-    --clr-codeCommentsFg: $gray;
+// .window
+//   &.light
+//     // --clr-codeBg: hsl(40deg 22% 98%);
+//     --clr-codeBg: $codeBgLandingLight;
+//     // --clr-codeBg: #f9fafb;
+//     --clr-codeFg: black;
+//     --clr-headerBg: $yellowLight;
+//     --clr-borderBg: hsl(36deg 10% 87%);
+//     // --clr-boxShadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+//     --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+//     --clr-codeCommentsFg: $grayLight;
+//   &.dark
+//     --clr-codeBg: $codeBgLandingDark;
+//     --clr-headerBg: #12171e;
+//     --clr-borderBg: #434342;
+//     --clr-codeFg: white;
+//     --clr-boxShadow: rgba(0, 0, 0, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
+//     --clr-codeCommentsFg: $gray;
 
-  flexColumn(0);
-  background-color: $codeBg;
-  border-radius: $borderRadius;
-  // box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  // box-shadow: $boxShadow;
-  // box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-  // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-  border: 1px solid $borderBg;
+//   flexColumn(0);
+//   background-color: $codeBg;
+//   border-radius: $borderRadius;
+//   // box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+//   // box-shadow: $boxShadow;
+//   // box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+//   // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+//   border: 1px solid $borderBg;
 
-  font-size: $editorFontSize;
-  &-responsive
-    font-size: $editorResponsiveFontSize;
-    @media screen and (min-width: $editorFontMaxOutWidth)
-      font-size: $editorMaxFontSize
-    @media screen and (max-width: $editorFontMinOutWidth)
-      font-size: $editorMinFontSize;
+//   font-size: $editorFontSize;
+//   &-responsive
+//     font-size: $editorResponsiveFontSize;
+//     @media screen and (min-width: $editorFontMaxOutWidth)
+//       font-size: $editorMaxFontSize
+//     @media screen and (max-width: $editorFontMinOutWidth)
+//       font-size: $editorMinFontSize;
 
-  .header
-    flexRow($borderRadius);
-    padding: "calc(%s / 1.5)" % $borderRadius $borderRadius;
-    align-items: center;
-    border-top-left-radius: $borderRadius;
-    border-top-right-radius: $borderRadius;
-    background-color: $headerBg;
-    border-bottom: 1px solid $borderBg;
-    .icons
-      flexRow(10px);
-      .icon
-        width: $borderRadius;
-        height: $borderRadius;
-        display: flex;
-        border-radius: 50%;
-        &.red
-          background-color: $appIconRed;
-        &.yellow
-          background-color: $appIconYellow;
-        &.green
-          background-color: $appIconGreen;
-    .name
-      line-height: 1;
-      font-size: .9rem;
-      color: $codeFg;
-  .editor
-    flexRow();
-    background-color: unset;
-    
-    .lines
-      flexColumn();
-      align-items: flex-end;
-      justify-content: center;
-      // font-size: .66rem;
-      line-height: 1.35;
-      white-space: break-spaces;
-      width: 3ch;
-      padding: $borderRadius .5rem;
-      padding-right: 0;
-      cursor: default;
-      color: $borderBg;
-      -webkit-user-select: none;
-      user-select: none;
-      &-numbers
-        justify-content: flex-start;
-    .chunk
-      &.black
-        color: $black;
-      &.blue
-        color: $blue;
-      &.blueDark
-        color: $blueDark;
-      &.gray
-        color: $gray;
-      &.grayLight
-        color: $grayLight;
-      &.green
-        color: $green;
-      &.orange
-        color: $orange;
-      &.purple
-        color: $purple;
-      &.red
-        color: $red;
-      &.white
-        color: $white;
-      &.yellow
-        color: $yellow;
-      &.thin
-        font-weight: 400;
-.code
-  flex: 1;
-  color: $codeFg;
-  // font-size: .75rem;
-  font-weight: 600;
-  line-height: 1.35;
-  padding: $borderRadius .75em $borderRadius 1em;
-  background-color: unset;
-  box-shadow: none;
-  white-space: break-spaces;
+//   .header
+//     flexRow($borderRadius);
+//     padding: "calc(%s / 1.5)" % $borderRadius $borderRadius;
+//     align-items: center;
+//     border-top-left-radius: $borderRadius;
+//     border-top-right-radius: $borderRadius;
+//     background-color: $headerBg;
+//     border-bottom: 1px solid $borderBg;
+//     .icons
+//       flexRow(10px);
+//       .icon
+//         width: $borderRadius;
+//         height: $borderRadius;
+//         display: flex;
+//         border-radius: 50%;
+//         &.red
+//           background-color: $appIconRed;
+//         &.yellow
+//           background-color: $appIconYellow;
+//         &.green
+//           background-color: $appIconGreen;
+//     .name
+//       line-height: 1;
+//       font-size: .9rem;
+//       color: $codeFg;
+//   .content
+//     flexRow();
+//     background-color: unset;
+
+// .code
+//   flex: 1;
+//   color: $codeFg;
+//   // font-size: .75rem;
+//   font-weight: 600;
+//   line-height: 1.35;
+//   padding: $borderRadius .75em $borderRadius 1em;
+//   background-color: unset;
+//   box-shadow: none;
+//   white-space: break-spaces;
