--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -1,11 +1,11 @@
 // fontRegular = 'Source Sans Pro', sans-serif
 // fontRegular = 'Golos Text', sans-serif
-fontRegular = 'Noto Sans', sans-serif
+$fontRegular = 'Noto Sans', sans-serif
 // fontRegular = 'Work Sans', sans-serif
 // fontTitle = 'Inconsolata', sans-serif
-fontTitle = 'Exo 2', sans-serif
+$fontTitle = 'Exo 2', sans-serif
 // fontRegular = 'Mullish', sans-serif
-fontMono = 'Ubuntu Mono', monospace
+$fontMono = 'Ubuntu Mono', monospace
 
 gapXXLarge = 64px;
 gapLarge = 32px;
@@ -29,7 +29,7 @@ $black = #313131;
 $blue = #50a3d7;
 $blueDark = #4b83bf;
 $gray = #606060;
-$grayLight = #a0a0a0;
+$grayLight = #c8c8c8;
 $green = #53a372;
 $orange = #eba652;
 $purple = #b481f0;
