--- a/docs/src/index.styl
+++ b/docs/src/index.styl
@@ -7,19 +7,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --clr-accent-bg: #ff0000;
-  --clr-header-bg: #4b8493;
-  --clr-header-fg: #f9f5f1;
   --clr-bg: #fcfaf2;
   --clr-fg: #242424;
-  --clr-card-bg: #39393A;
-  --clr-card-fg: #E6E6E6;
 
 @media (prefers-color-scheme: light)
   :root
-    --clr-header-bg: #4b8493;
-    --clr-header-fg: #f9f5f1;
-    --clr-bg: #fcfaf2;
-    --clr-fg: #242424;
-    --clr-card-bg: #39393A;
-    --clr-card-fg: #E6E6E6;
+    --clr-bg: #242424;
+    --clr-fg: #fcfaf2;
