--- a/docs/src/uikit/vars.styl
+++ b/docs/src/uikit/vars.styl
@@ -18,3 +18,6 @@ $textDark = #f5f1e5;
 $bgBorderDark = #41403c;
 
 $accent = hsl(195deg 88% 33%);
+
+$sectionMinWidth = 320px;
+$sectionMaxWidth = 700px;
