--- a/docs/src/components/Window.styl
+++ b/docs/src/components/Window.styl
@@ -1,34 +1,12 @@
 @import "../utils.styl"
 @import "../vars.styl"
 
-// $codeBg = #22272e;
-// $codeFg = white;
-// $headerBg = darken($codeBg, 5);
-
-$codeBg = var(--clr-codeBg);
-$codeFg = var(--clr-codeFg);
-$boxShadow = var(--clr-boxShadow);
-$codeCommentsFg = var(--clr-codeCommentsFg);
-
-$headerBg = var(--clr-headerBg);
-$borderBg = var(--clr-borderBg);
-
-$editorFontSize = 1.2em;
-$editorResponsiveFontSize = 1.8vw;
-$editorMinFontSize = 14px;
-$editorMaxFontSize = 20px;
-$editorFontMaxOutWidth = 1111px;
-$editorFontMinOutWidth = 777px;
-
 .window
   &.light
-    // --clr-codeBg: hsl(40deg 22% 98%);
     --clr-codeBg: $codeBgLandingLight;
-    // --clr-codeBg: #f9fafb;
     --clr-codeFg: black;
     --clr-headerBg: $yellowLight;
     --clr-borderBg: hsl(36deg 10% 87%);
-    // --clr-boxShadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     --clr-codeCommentsFg: $grayLight;
   &.dark
@@ -40,21 +18,21 @@ $editorFontMinOutWidth = 777px;
     --clr-codeCommentsFg: $gray;
 
   flexColumn(0);
-  background-color: $codeBg;
+  background-color: var(--clr-codeBg);
   border-radius: $borderRadius;
   // box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   // box-shadow: $boxShadow;
   // box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
   // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-  border: 1px solid $borderBg;
+  border: 1px solid var(--clr-borderBg);
 
-  font-size: $editorFontSize;
+  font-size: $codeFontSize;
   &-responsive
-    font-size: $editorResponsiveFontSize;
-    @media screen and (min-width: $editorFontMaxOutWidth)
-      font-size: $editorMaxFontSize
-    @media screen and (max-width: $editorFontMinOutWidth)
-      font-size: $editorMinFontSize;
+    font-size: $codeResponsiveFontSize;
+    @media screen and (min-width: $codeFontMaxOutWidth)
+      font-size: $codeMaxFontSize
+    @media screen and (max-width: $codeFontMinOutWidth)
+      font-size: $codeMinFontSize;
 
   .header
     flexRow($borderRadius);
@@ -63,7 +41,7 @@ $editorFontMinOutWidth = 777px;
     border-top-left-radius: $borderRadius;
     border-top-right-radius: $borderRadius;
     background-color: $headerBg;
-    border-bottom: 1px solid $borderBg;
+    border-bottom: 1px solid var(--clr-borderBg);
     .icons
       flexRow(10px);
       .icon
@@ -80,7 +58,7 @@ $editorFontMinOutWidth = 777px;
     .name
       line-height: 1;
       font-size: .9rem;
-      color: $codeFg;
+      color: var(--clr-codeFg);
   .content
     flexRow();
     background-color: unset;
