--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -1,3 +1,5 @@
+// fonts
+
 // fontRegular = 'Source Sans Pro', sans-serif
 // fontRegular = 'Golos Text', sans-serif
 $fontRegular = 'Noto Sans', sans-serif
@@ -7,23 +9,15 @@ $fontTitle = 'Exo 2', sans-serif
 // fontRegular = 'Mullish', sans-serif
 $fontMono = 'Ubuntu Mono', monospace
 
-gapXXLarge = 64px;
-gapLarge = 32px;
-gapMedium = 16px;
-gapSmall = 8px;
+$accent = hsl(195deg 88% 33%);
 
-borderRadiusSmall = 4px;
-borderRadiusMedium = 8px;
-borderRadiusLarge = 16px;
-
-sectionMinWidth = 320px;
-sectionMaxWidth = 700px;
-
-$darkMode = true;
+// window icons
 
 $appIconRed = #ed614e;
 $appIconYellow = #e0b443;
 $appIconGreen = #54cc78;
+
+// colors
 
 $black = #313131;
 $blue = #50a3d7;
@@ -37,10 +31,9 @@ $red = #f26f7a;
 $white = #c8c8c8;
 $whitePure = #ffffff;
 $yellow = #fcd86d;
-
-// $yellowLight = hsl(37deg 65% 91%)
 $yellowLight = #faf2e4;
-$accent = hsl(195deg 88% 33%);
+
+// code themes
 
 $codeBgLight = #fffefd;
 $bgColorLandingLight = #f2f5f6;
@@ -61,15 +54,22 @@ $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
 $bgBorderDark = #41403c;
 
-clrHeaderBg ?= #4b8493
-clrHeaderFg ?= #f9f5f1
-clrBg ?= $whitePure;
-clrFg ?= #242424
-clrCardBg ?= #39393A
-clrCardFg ?= #E6E6E6
-clrAccent ?= #ff0000
+
+$clrHeaderBg ?= #4b8493
+$clrHeaderFg ?= #f9f5f1
+
+$gapXXLarge = 64px;
+$gapLarge = 32px;
+$gapMedium = 16px;
+$gapSmall = 8px;
 
 $borderRadius = 12px;
+$borderRadiusSmall = 4px;
+$borderRadiusMedium = 8px;
+$borderRadiusLarge = 16px;
+
+$sectionMinWidth = 320px;
+$sectionMaxWidth = 700px;
 
 $breakHeaderLogo = 600px;
 $breakHeaderMenu = 485px;
@@ -77,6 +77,19 @@ $breakDescCTA = 1000px;
 $breakSnippetsWrap = 768px;
 $breakSnippetsColumn = 570px;
 
-$fontRegular = 'Noto Sans', sans-serif
-$fontTitle = 'Exo 2', sans-serif
-$fontMono = 'Ubuntu Mono', monospace
+
+$codeFontSize = 1.2em;
+$codeResponsiveFontSize = 1.8vw;
+$codeMinFontSize = 14px;
+$codeMaxFontSize = 20px;
+$codeFontMaxOutWidth = 1111px;
+$codeFontMinOutWidth = 777px;
+
+
+$titleResponsiveFontSize = 3.8vw;
+$titleMinFontSize = 32px;
+$titleMaxFontSize = 52px;
+// 100 * $titleMaxFontSize / $titleResponsiveFontSize
+$titleFontMaxOutWidth = 1368px;
+// 100 * $titleMinFontSize / $titleResponsiveFontSize
+$titleFontMinOutWidth = 842px;
