refactor: style variables

--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -3,12 +3,14 @@
 
 lightTheme()
   --clr-bgMain: $bgColorMainLight;
+  --clr-fgTitle: $titleLight;
   --clr-fgText: $textLight;
   --clr-bgCode: $codeBgMainLight;
   --clr-bgBorder: $bgBorderLight;
 
 darkTheme()
   --clr-bgMain: $bgColorMainDark;
+  --clr-fgTitle: $titleDark;
   --clr-fgText: $textDark;
   --clr-bgCode: $codeBgMainDark;
   --clr-bgBorder: $bgBorderDark;
