--- a/docs/src/components/Window.styl
+++ b/docs/src/components/Window.styl
@@ -3,14 +3,14 @@
 
 .window
   &.light
-    --clr-codeBg: $codeBgLandingLight;
+    --clr-codeBg: $codeBgMainLight;
     --clr-codeFg: black;
     --clr-headerBg: $yellowLight;
     --clr-borderBg: hsl(36deg 10% 87%);
     --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     --clr-codeCommentsFg: $grayLight;
   &.dark
-    --clr-codeBg: $codeBgLandingDark;
+    --clr-codeBg: $codeBgMainDark;
     --clr-headerBg: #12171e;
     --clr-borderBg: #434342;
     --clr-codeFg: white;
