--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -36,23 +36,23 @@ $yellowLight = #faf2e4;
 // code themes
 
 $codeBgLight = #fffefd;
-$bgColorLandingLight = #f2f5f6;
 $bgColorSecondaryLight = #f2f5f6;
 $bgColorMainLight = white;
-$codeBgLandingLight = $bgColorMainLight;
-$codeBgMainLight = $bgColorSecondaryLight;
+$codeBgMainLight = $bgColorMainLight;
 $titleLight = #050505;
 $textLight = #313131;
 $bgBorderLight = #e0e4e5;
+$bgColorLandingLight = #f2f5f6;
+$codeBgLandingLight = $bgColorSecondaryLight;
 
-$bgColorLandingDark = hsl(195deg 18% 10%);
 $bgColorSecondaryDark = hsl(195deg 18% 10%);
 $bgColorMainDark = hsl(195deg 14% 15%);
-$codeBgLandingDark = $bgColorMainDark;
-$codeBgMainDark = $bgColorSecondaryDark;
+$codeBgMainDark = $bgColorMainDark;
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
 $bgBorderDark = #41403c;
+$bgColorLandingDark = hsl(195deg 18% 10%);
+$codeBgLandingDark = $bgColorSecondaryDark;
 
 
 $clrHeaderBg ?= #4b8493
