refactor: style variables

--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -2,18 +2,20 @@
 @import "./vars.styl"
 
 lightTheme()
-  --clr-bgMain: $bgColorMainLight;
+  --clr-bgMain: $bgMainLight;
   --clr-fgTitle: $titleLight;
   --clr-fgText: $textLight;
-  --clr-bgCode: $codeBgMainLight;
-  --clr-bgBorder: $bgBorderLight;
+  --clr-bgCode: $bgCodeMainLight;
+  --clr-fgCode: black;
+  --clr-border: $borderLight;
 
 darkTheme()
-  --clr-bgMain: $bgColorMainDark;
+  --clr-bgMain: $bgMainDark;
   --clr-fgTitle: $titleDark;
   --clr-fgText: $textDark;
-  --clr-bgCode: $codeBgMainDark;
-  --clr-bgBorder: $bgBorderDark;
+  --clr-bgCode: $bgCodeMainDark;
+  --clr-fgCode: white;
+  --clr-border: $borderDark;
 
 *
   margin: 0;
