--- a/docs/src/components/LanguageTab.styl
+++ b/docs/src/components/LanguageTab.styl
@@ -24,7 +24,7 @@
     left: calc((100% - 60%)/2);
     right: calc((100% - 60%)/2);
     height: 8px;
-    background-color: var(--clr-bgBorder);
+    background-color: var(--clr-border);
     border-radius: 100vw;
     transform: scaleX(0);
     transition: transform 150ms ease-in;
