--- a/docs/src/components/code.styl
+++ b/docs/src/components/code.styl
@@ -3,7 +3,7 @@
 
 .code
   flex: 1;
-  color: var(--clr-codeFg);
+  color: var(--clr-fgCode);
   // font-size: .75rem;
   font-family: $fontMono;
   font-weight: 600;
