--- a/docs/src/uikit/UiKitApp.styl
+++ b/docs/src/uikit/UiKitApp.styl
@@ -2,22 +2,22 @@
 @import "./vars.styl"
 
 lightTheme()
-  --clr-bgMain: $bgColorMainLight;
-  --clr-bgSecondary: $bgColorSecondaryLight;
-  --clr-bgBorder: $bgBorderLight;
+  --clr-bgMain: $bgMainLight;
+  --clr-bgSecondary: $bgSecondaryLight;
+  --clr-border: $borderLight;
   --clr-fgText: $textLight;
   --clr-fgTitle: $titleLight;
-  --clr-bgCode: $codeBgMainLight;
-  --clr-bgBorder: $bgBorderLight;
+  --clr-bgCode: $bgCodeMainLight;
+  --clr-border: $borderLight;
 
 darkTheme()
-  --clr-bgMain: $bgColorMainDark;
-  --clr-bgSecondary: $bgColorSecondaryDark;
-  --clr-bgBorder: $bgBorderDark;
+  --clr-bgMain: $bgMainDark;
+  --clr-bgSecondary: $bgSecondaryDark;
+  --clr-border: $borderDark;
   --clr-fgText: $textDark;
   --clr-fgTitle: $titleDark;
-  --clr-bgCode: $codeBgMainDark;
-  --clr-bgBorder: $bgBorderDark;
+  --clr-bgCode: $bgCodeMainDark;
+  --clr-border: $borderDark;
 
 *
   margin: 0;
