--- a/docs/src/uikit/vars.styl
+++ b/docs/src/uikit/vars.styl
@@ -2,20 +2,20 @@ $fontRegular = 'Noto Sans', sans-serif
 $fontTitle = 'Exo 2', sans-serif
 $fontMono = 'Ubuntu Mono', monospace
 
-$codeBgLight = #fffefd;
-$bgColorSecondaryLight = #f2f5f6;
-$bgColorMainLight = white;
-$codeBgMainLight = $bgColorSecondaryLight;
+$bgCodeLight = #fffefd;
+$bgSecondaryLight = #f2f5f6;
+$bgMainLight = white;
+$bgCodeMainLight = $bgSecondaryLight;
 $titleLight = #050505;
 $textLight = #313131;
-$bgBorderLight = #e0e4e5;
+$borderLight = #e0e4e5;
 
-$bgColorSecondaryDark = hsl(195deg 18% 10%);
-$bgColorMainDark = hsl(195deg 14% 15%);
-$codeBgMainDark = $bgColorSecondaryDark;
+$bgSecondaryDark = hsl(195deg 18% 10%);
+$bgMainDark = hsl(195deg 14% 15%);
+$bgCodeMainDark = $bgSecondaryDark;
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
-$bgBorderDark = #41403c;
+$borderDark = #41403c;
 
 $accent = hsl(195deg 88% 33%);
 
