--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -1,12 +1,12 @@
 // fonts
 
-// fontRegular = 'Source Sans Pro', sans-serif
-// fontRegular = 'Golos Text', sans-serif
+// Source Sans Pro
+// Golos Text
+// Work Sans
 $fontRegular = 'Noto Sans', sans-serif
-// fontRegular = 'Work Sans', sans-serif
-// fontTitle = 'Inconsolata', sans-serif
+// Inconsolata
 $fontTitle = 'Exo 2', sans-serif
-// fontRegular = 'Mullish', sans-serif
+// Mullish
 $fontMono = 'Ubuntu Mono', monospace
 
 $accent = hsl(195deg 88% 33%);
@@ -35,24 +35,24 @@ $yellowLight = #faf2e4;
 
 // code themes
 
-$codeBgLight = #fffefd;
-$bgColorSecondaryLight = #f2f5f6;
-$bgColorMainLight = white;
-$codeBgMainLight = $bgColorMainLight;
+$bgCodeLight = #fffefd;
+$bgSecondaryLight = #f2f5f6;
+$bgMainLight = white;
+$bgCodeMainLight = $bgMainLight;
 $titleLight = #050505;
 $textLight = #313131;
-$bgBorderLight = #e0e4e5;
-$bgColorLandingLight = #f2f5f6;
-$codeBgLandingLight = $bgColorSecondaryLight;
+$borderLight = #e0e4e5;
+$bgLandingLight = #f2f5f6;
+$bgCodeLandingLight = $bgSecondaryLight;
 
-$bgColorSecondaryDark = hsl(195deg 18% 10%);
-$bgColorMainDark = hsl(195deg 14% 15%);
-$codeBgMainDark = $bgColorMainDark;
+$bgSecondaryDark = hsl(195deg 18% 10%);
+$bgMainDark = hsl(195deg 14% 15%);
+$bgCodeMainDark = $bgMainDark;
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
-$bgBorderDark = #41403c;
-$bgColorLandingDark = hsl(195deg 18% 10%);
-$codeBgLandingDark = $bgColorSecondaryDark;
+$borderDark = #41403c;
+$bgLandingDark = hsl(195deg 18% 10%);
+$bgCodeLandingDark = $bgSecondaryDark;
 
 
 $clrHeaderBg ?= #4b8493
