--- a/docs/src/components/Landing.styl
+++ b/docs/src/components/Landing.styl
@@ -2,13 +2,13 @@
 @import "../vars.styl"
 
 lightTheme()
-  --clr-bgCode: $bgCodeLandingLight
+  --clr-bgCodeLanding: $bgCodeLandingLight;
   --clr-bgLanding: $bgLandingLight;
   --clr-fgLanding: black;
   --clr-boxShadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
 darkTheme()
-  --clr-bgCode: $bgCodeLandingDark;
+  --clr-bgCodeLanding: $bgCodeLandingDark;
   --clr-bgLanding: $bgLandingDark;
   --clr-fgLanding: white;
   --clr-boxShadow: rgb(0 10 23 / 25%) 0px 13px 27px -5px, rgb(0 0 0 / 30%) 0px 8px 16px -8px;
@@ -21,12 +21,14 @@ darkTheme()
   background-color: var(--clr-bgLanding);
   border-bottom: 1px solid var(--clr-border);
   color: var(--clr-fgLanding);
-  .window
-    background-color: var(--clr-bgCode);
   &.light
     lightTheme();
+    .window.light
+      --clr-bgCode: var(--clr-bgCodeLanding);
   &.dark
     darkTheme();
+    .window.dark
+      --clr-bgCode: var(--clr-bgCodeLanding);
   .landing
     flex: 1;
     display: grid;
