--- a/docs/src/components/Window.styl
+++ b/docs/src/components/Window.styl
@@ -1,19 +1,27 @@
 @import "../utils.styl"
 @import "../vars.styl"
 
-.window
-  &.light
-    --clr-bgCode: $bgCodeMainLight;
-    --clr-bgHeader: $yellowLight;
-    --clr-border: hsl(36deg 10% 87%);
-    --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    --clr-codeCommentsFg: $grayLight;
-  &.dark
+lightTheme()
+  --clr-bgCode: $bgCodeMainLight;
+  --clr-fgCode: black;
+  --clr-bgWindowHeader: $yellowLight;
+  // --clr-border: hsl(36deg 10% 87%);
+  --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  --clr-codeCommentsFg: $grayLight;
+
+darkTheme()
     --clr-bgCode: $bgCodeMainDark;
-    --clr-bgHeader: #12171e;
-    --clr-border: #434342;
+    --clr-fgCode: white;
+    --clr-bgWindowHeader: #12171e;
+    // --clr-border: #434342;
     --clr-boxShadow: rgba(0, 0, 0, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
     --clr-codeCommentsFg: $gray;
+
+.window
+  &.light
+    lightTheme()
+  &.dark
+    darkTheme()
 
   flexColumn(0);
   background-color: var(--clr-bgCode);
@@ -38,7 +46,7 @@
     align-items: center;
     border-top-left-radius: $borderRadius;
     border-top-right-radius: $borderRadius;
-    background-color: $bgHeader;
+    background-color: var(--clr-bgWindowHeader);
     border-bottom: 1px solid var(--clr-border);
     .icons
       flexRow(10px);
