--- a/docs/src/uikit/Button.styl
+++ b/docs/src/uikit/Button.styl
@@ -24,8 +24,7 @@
       background-color: lighten($accent, 5);
   &-secondary
     background-color: transparent;
-    color: var(--clr-text);
-    border: 1px solid var(--clr-text);
+    color: var(--clr-fgText);
+    border: 1px solid var(--clr-fgText);
     &:hover
-      // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      background-color: $codeBg;
+      background-color: var(--clr-bgCodeLanding);
