--- a/docs/src/uikit/TopBar.styl
+++ b/docs/src/uikit/TopBar.styl
@@ -1,4 +1,4 @@
-@import "./vars.styl";
+@import "../vars.styl";
 @import "../utils.styl";
 
 .topbar-container
@@ -32,9 +32,6 @@
       gap: 1.5rem;
       justify-self: end;
       align-self: center;
-      // justify-content: end;
-      // align-items: center;
-      // font-size: 1rem;
       font-weight: 400;
       &-item
         color: $menuInactiveFg;
