--- a/docs/src/components/Logo.styl
+++ b/docs/src/components/Logo.styl
@@ -26,7 +26,7 @@ $logoSize = 48px;
     // padding: 1.5rem 0.8rem 0rem 1.5rem;
     border-bottom-left-radius: $borderRadius;
     border-bottom-right-radius: $borderRadius;
-    // background-color: darken(clrHeaderBg, 20);
+    // background-color: darken(bgWindowHeader, 20);
     background-color: $accent;
     // box-shadow: $boxShadow;
   .title
