--- a/docs/src/components/Token.styl
+++ b/docs/src/components/Token.styl
@@ -41,9 +41,9 @@
   .builtin
     color: $purple;
   .string
-    color: $darkBlue;
+    color: $blueDark;
   .number
-    color: $darkBlue;
+    color: $blueDark;
   .comment
     color: lightgray;
   .function
