--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -20,35 +20,48 @@ $appIconGreen = #54cc78;
 // colors
 
 $black = #313131;
+$black = #313131;
 $blue = #50a3d7;
+$blue = #5174c9;
 $blueDark = #4b83bf;
+$cyan = hsl(195deg 86% 68%);
+$darkBlue = #0d296b;
 $gray = #606060;
 $grayLight = #c8c8c8;
 $green = #53a372;
+$lightBlue = #99c2f3;
+$lightOrange = #ecab6f;
+$lightPurple = #cb96f4;
+$orange = #d98333;
 $orange = #eba652;
+$purple = #8e37d2;
 $purple = #b481f0;
 $red = #f26f7a;
-$white = #c8c8c8;
+// $white = #c8c8c8;
+$white = #e0e0e0;
 $whitePure = #ffffff;
 $yellow = #fcd86d;
 $yellowLight = #faf2e4;
 
+
 // code themes
 
-$bgCodeLight = #fffefd;
-$bgSecondaryLight = #f2f5f6;
 $bgMainLight = white;
-$bgCodeMainLight = $bgSecondaryLight;
+$bgSecondaryLight = #f2f5f6;
 $titleLight = #050505;
 $textLight = #313131;
 $borderLight = #e0e4e5;
 
-$bgSecondaryDark = hsl(195deg 18% 10%);
 $bgMainDark = hsl(195deg 14% 15%);
-$bgCodeMainDark = $bgSecondaryDark;
+$bgSecondaryDark = hsl(195deg 18% 10%);
 $titleDark = #f8f4e8;
 $textDark = #f5f1e5;
 $borderDark = #41403c;
+
+// $bgCodeLight = #fffefd;
+$bgCodeMainLight = $bgSecondaryLight;
+
+$bgCodeMainDark = $bgSecondaryDark;
 
 $bgLandingLight = #f2f5f6;
 $bgCodeLandingLight = $bgMainLight;
